compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__constant.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
---
module rec my.``mod``

let go () = begin
    rocket_ship.x
end
