compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__constant_module_access_with_keyword.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport rocket_ship\npub const variable = rocket_ship.class\n"
---
module rec my.``mod``


let variable = rocket_ship.``class``
