compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__discarded_duplicate_import.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship as _nasa_rocket\npub fn go() { rocket_ship.go() }\n"
---
module rec my.``mod``



let go () = begin
    esa.rocket_ship.go()
end
