compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__nested_module_constant.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport rocket_ship/launcher\npub fn go() { launcher.x }\n"
---
module rec my.``mod``


let go () = begin
    rocket_ship.launcher.x
end
