compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__nested_same_package.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "import one/two/three\npub fn go() { three.go() }\n"
---
module rec my.``mod``

let go () = begin
    one.two.three.go()
end
