compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__imports__renamed_module.snap
---
source: compiler-core/src/fsharp/tests/imports.rs
expression: "\nimport x as y\nconst z = y.v\n"
---
module rec my.``mod``
module y = x

let private z = y.v
